# gmm_c

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  core.cpp  core.h  cut_out.avi  output2.avi  test.cpp  testgmm
